--- a/opennms-snmp/opennms-snmp-snmp4j/pom.xml
+++ b/opennms-snmp/opennms-snmp-snmp4j/pom.xml
@@ -11,19 +11,24 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-snmp-api</artifactId>
-      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opennms</groupId>
+      <artifactId>opennms-test</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.snmp4j</groupId>
       <artifactId>snmp4j</artifactId>
-      <version>1.7.2</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.snmp4j</groupId>
       <artifactId>snmp4j-agent</artifactId>
-      <version>1.0-beta4</version>
-      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
