NMS-15808: add test coverage for topology protocols

--- a/features/api-layer/dao-common/pom.xml
+++ b/features/api-layer/dao-common/pom.xml
@@ -78,5 +78,14 @@
             <artifactId>org.opennms.features.situation-feedback.api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opennms.features.enlinkd</groupId>
+            <artifactId>org.opennms.features.enlinkd.service.api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
