--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -869,9 +869,8 @@ org.opennms.newts.nan_on_counter_wrap=true
 # org.opennms.mate.maxRecursionDepth=8
 
 # ###### DNS tuning options ######
-# A thread pool is used to allow concurrent DNS lookups on OpenNMS instance.
-# org.opennms.netmgt.provision.dns.client.rpc.maxThreadPoolSize=64
-# org.opennms.netmgt.provision.dns.client.rpc.queueCapacity=4096
+# A thread pool is used to allow concurrent DNS lookups on OpenNMS Minions.
+# org.opennms.netmgt.provision.dns.client.rpc.threadCount=64
 
 # By default hostnames are determined for a node's IP addresses during the provisioning's audit phase.
 # org.opennms.provisiond.reverseResolveRequisitionIpInterfaceHostnames=true
