--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -275,8 +275,9 @@
          <configuration>
            <encoding>UTF-8</encoding>
            <nonFilteredFileExtensions>
-             <nonFilteredFileExtension>raw</nonFilteredFileExtension>
              <nonFilteredFileExtension>dat</nonFilteredFileExtension>
+             <nonFilteredFileExtension>jce</nonFilteredFileExtension>
+             <nonFilteredFileExtension>raw</nonFilteredFileExtension>
            </nonFilteredFileExtensions>
          </configuration>
         <!-- Copy some default configuration for $OPENNMS_HOME/etc/ which is used by some system tests -->
