--- a/pom.xml
+++ b/pom.xml
@@ -1151,7 +1151,6 @@
                    <exclude>jdom:jdom</exclude>                      <!-- use: org.apache.servicemix.bundles.jdom -->
                    <exclude>log4j:log4j</exclude>                    <!-- use: log4j2 -->
                    <exclude>org.apache.velocity:velocity</exclude>   <!-- use: org.apache.velocity:velocity-engine-core -->
-                   <exclude>org.apache.zookeeper:zookeeper</exclude> <!-- use: org.apache.servicemix.bundles.zookeeper -->
                    <exclude>org.springframework:*</exclude>          <!-- use: org.apache.servicemix.bundles.spring-* -->
                    <exclude>org.springframework.security:*</exclude> <!-- use: org.apache.servicemix.bundles.spring-security-* -->
                    <exclude>org.springframework.security.kerberos:*</exclude> <!-- use: org.apache.servicemix.bundles.spring-security-* -->
@@ -1709,8 +1708,8 @@
     <junit5Version>5.9.2</junit5Version>
     <junit5PlatformVersion>1.9.2</junit5PlatformVersion>
     <karafVersion>4.3.6</karafVersion>
-    <kafkaBundleVersion>3.3.1_1</kafkaBundleVersion>
-    <kafkaVersion>3.3.1</kafkaVersion>
+    <kafkaBundleVersion>3.3.2_1</kafkaBundleVersion>
+    <kafkaVersion>3.3.2</kafkaVersion>
     <kotlinVersion>1.4.10</kotlinVersion>
     <liquibaseVersion>3.6.3</liquibaseVersion>
     <lmaxDisruptorVersion>3.4.4</lmaxDisruptorVersion>
@@ -1761,7 +1760,7 @@
     <servletApiVersion>3.1.0</servletApiVersion>
     <slf4jVersion>1.7.36</slf4jVersion>
     <smackVersion>4.0.6</smackVersion>
-    <snappyJavaVersion>1.1.10.2</snappyJavaVersion>
+    <snappyJavaVersion>1.1.10.3</snappyJavaVersion>
     <snmp4jVersion>2.5.5</snmp4jVersion>
     <snmp4jagentVersion>2.5.3</snmp4jagentVersion>
     <sonarVersion>3.9.1.2184</sonarVersion>
@@ -1785,8 +1784,7 @@
     <xstreamVersion>1.4.20</xstreamVersion>
     <wsdl4jVersion>1.6.3</wsdl4jVersion>
     <wsmanVersion>1.2.3</wsmanVersion>
-    <zookeeperOsgiVersion>3.8.1</zookeeperOsgiVersion>
-    <zookeeperVersion>${zookeeperOsgiVersion}_1</zookeeperVersion>
+    <zookeeperVersion>3.5.10</zookeeperVersion>
     <zstdJniVersion>1.5.2-1</zstdJniVersion>
     <minaSshdVersion>2.10.0</minaSshdVersion>
     <karafSshdVersion>${karafVersion}.ONMS_1</karafSshdVersion>
@@ -3664,10 +3662,6 @@
             <artifactId>log4j</artifactId>
             <groupId>log4j</groupId>
           </exclusion>
-          <exclusion>
-            <artifactId>org.apache.zookeeper</artifactId>
-            <groupId>zookeeper</groupId>
-          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -3678,10 +3672,6 @@
           <exclusion>
             <artifactId>log4j</artifactId>
             <groupId>log4j</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>org.apache.zookeeper</artifactId>
-            <groupId>zookeeper</groupId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -3694,10 +3684,6 @@
             <artifactId>log4j</artifactId>
             <groupId>log4j</groupId>
           </exclusion>
-          <exclusion>
-            <artifactId>org.apache.zookeeper</artifactId>
-            <groupId>zookeeper</groupId>
-          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -3708,10 +3694,6 @@
           <exclusion>
             <artifactId>log4j</artifactId>
             <groupId>log4j</groupId>
-          </exclusion>
-          <exclusion>
-            <artifactId>org.apache.zookeeper</artifactId>
-            <groupId>zookeeper</groupId>
           </exclusion>
         </exclusions>
       </dependency>
